# mr4mp

./: .pylintrc  .readthedocs.yaml  .travis.yml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint-test-cover-docs.yml
docs/: conf.py  toc.rst
docs/_source/: mr4mp.rst
mr4mp/: __init__.py  mr4mp.py  test.py
mr4mp/tests/: test_mr4mp.py
src/mr4mp/: __init__.py  mr4mp.py
test/: test_mr4mp.py
